--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 ---
-layout: main
+layout: blog
 title: Blog
 permalink: /blog/
 ---
@@ -7,13 +7,15 @@ permalink: /blog/
             <div id="blog">
                 {% for post in site.categories.blog %}    
                     <div class="row clearfix">
-
+                        <div class="column eighth"></div>
                         <div class="column three-fourths">
                             <h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
                             <h4>{{ post.date | date: "%B %d, %Y" }}</h4>
                             {{ post.content }}
                             
-                        </div>                                            
+                        </div>   
+
+                        <div class="column eighth"></div>       
                     </div>
                 {% endfor %}   
             </div>
